# btct

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  app.py  app_test.py  batch_test.py  demo_signal_engine.py  functional_test.py  health_check.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: lint.yml  test.yml
.streamlit/: config.toml
apis/: binance.py  bitfinex.py  models.py
btc_futures_signal_app/docs/: PROJECT_PLAN.md
docs/: BTCT_Req.md  PROJECT_PLAN.md
logic/: patterns.py  signal_engine.py
tests/: test_binance_clean.py  test_cache_clean.py  test_models_and_patterns.py  test_signal_engine.py  test_ui_components_clean.py  test_ui_models.py
ui/: components.py
utils/: cache.py  config.py  exceptions.py  logging.py
